Fix overflow for the mobile version

--- a/style.css
+++ b/style.css
@@ -29,15 +29,17 @@
   font-style: normal;
 }
 
-body {
+.brb {
   margin: 0;
+  display: list-item;
+  overflow-x: hidden;
 }
 
 /* below are css for the toolbar section */
 .toolbar {
   display: flex;
   height: 48px;
-  width: 375px;
+  width: 100%;
   left: 0;
   top: 0;
   border-radius: 0;
@@ -77,7 +79,7 @@ body {
 
 .normal-button {
   display: inline;
-  left: 311px;
+  right: 64px;
   top: 4px;
   border-radius: 8px;
   padding: 3px;
@@ -97,7 +99,7 @@ body {
 .headline {
   display: flex;
   height: 400px;
-  width: 375px;
+  width: 100%;
   left: 0;
   top: 92px;
   border-radius: 0;
@@ -872,7 +874,7 @@ section */
   flex-direction: column;
   align-items: flex-start;
   height: 1901px;
-  width: 375px;
+  width: 100%;
   left: 0;
   top: 4293px;
   border-radius: 0;
